[gd_scene load_steps=3 format=3 uid="uid://dgfylm06ghbse"]

[ext_resource type="Script" uid="uid://cgt2xggldetxn" path="res://Interactables/Console/console.gd" id="1_yondo"]
[ext_resource type="Texture2D" uid="uid://de6vy6a4487ix" path="res://Interactables/Console/play-solid.svg" id="2_s6abk"]

[node name="Console" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 292.0
offset_bottom = 299.0
script = ExtResource("1_yondo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 292.0
offset_bottom = 300.0

[node name="CodeEditor" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/CodeEditor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(28, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
texture_normal = ExtResource("2_s6abk")
ignore_texture_size = true
stretch_mode = 0

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LuaConsole" type="LuaConsole" parent="Control"]

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_button_pressed"]
